# srg

./: README.md  pyproject.toml  requirements_embeddings.txt
src/embedding_pipeline/: __init__.py  __main__.py  main.py
src/embedding_pipeline/config/: __init__.py  config_manager.py  default_config.yaml
src/embedding_pipeline/core/: __init__.py  embedding_combiner.py  folder_processor.py  inference_manager.py
src/embedding_pipeline/gui/: __init__.py  app.py
src/embedding_pipeline/gui/static/: index.html  main.js  styles.css
src/embedding_pipeline/optimization/: __init__.py  losses.py  pso_optimizer.py  svm_trainer.py
src/embedding_pipeline/similarity/: __init__.py  base.py  concatenation.py  similarity_computer.py  svm_strategy.py  weighted_sum.py
src/embedding_pipeline/visualization/: __init__.py  tsne.py
